# iLQR

./: .gitignore  Cargo.toml  README.md  build.rs  ilqr_demo_env.yml  pyproject.toml
python/examples/: cartpole.ipynb  inverted-pendulum.ipynb  test.ipynb  ur5.ipynb
python/ilqr/: __init__.py
python/tests/: test_all.py
report/: report.bib  report.tex
slides/: slides.tex
src/: ilqr_solver.rs  lib.rs  py_ilqr_errors.rs  py_ilqr_solver.rs  py_utils.rs
videos/: balanced-cartpole.mov  balanced-pendulum.mov
